0000010: implemented Set metadata task. Added existing file constraint. Pom updates.