@@ -26,13 +26,14 @@ import org.sejda.core.support.perfix.processor.PrependPrefixProcessor;
 
 /**
  * Test unit for the {@link PrependPrefixProcessor}
+ * 
  * @author Andrea Vacondio
- *
+ * 
  */
 public class PrependPrefixProcessorTest {
 
     private PrependPrefixProcessor victim = new PrependPrefixProcessor();
-    
+
     @Test
     public void testComplexProcess() {
         String prefix = "prefix_";
@@ -40,12 +41,12 @@ public class PrependPrefixProcessorTest {
         String expected = "prefix_name";
         assertEquals(expected, victim.process(prefix, nameRequest().originalName(originalName)));
     }
-    
+
     @Test
     public void testComplexProcessWithPageNumber() {
         String prefix = "prefix_";
         String originalName = "name";
-        Integer page = new Integer("34");
+        Integer page = Integer.valueOf("34");
         String expected = "34_prefix_name";
         assertEquals(expected, victim.process(prefix, nameRequest().originalName(originalName).page(page)));
     }
